2025-06-26T00:57:08Z:
* notice: GitHub Actions Run: https://github.com/andry81-devops/actions/actions/runs/15890431048 # 686
* notice: Stats Output Repository: https://github.com/andry81-stats/gh-action--check-os-version--gh-stats/commits?branch=master&time_zone=utc&until=2025-06-26
* notice: last 14d: unq all: 3 8
* notice: prev accum: outdated-unq outdated-all / unq all: 556 949 / 563 956
* notice: next accum: outdated-unq outdated-all / unq all: 556 949 / 564 957
* notice: prev exec diff / last date diff / accum: unq all: +1 +1 -0 -0 / +1 +1 -0 -0 / 1 1
* notice: removed / changed dates: [] / [2025-06-25]

2025-06-25T00:57:54Z:
* notice: GitHub Actions Run: https://github.com/andry81-devops/actions/actions/runs/15864771960 # 685
* notice: Stats Output Repository: https://github.com/andry81-stats/gh-action--check-os-version--gh-stats/commits?branch=master&time_zone=utc&until=2025-06-25
* notice: last 14d: unq all: 2 7
* notice: prev accum: outdated-unq outdated-all / unq all: 556 949 / 562 955
* notice: next accum: outdated-unq outdated-all / unq all: 556 949 / 563 956
* notice: prev exec diff / last date diff / accum: unq all: +1 +1 -0 -0 / +1 +1 -0 -0 / 1 1
* notice: removed / changed dates: [] / [2025-06-24]

2025-06-23T01:00:41Z:
* notice: GitHub Actions Run: https://github.com/andry81-devops/actions/actions/runs/15812801461 # 683
* notice: Stats Output Repository: https://github.com/andry81-stats/gh-action--check-os-version--gh-stats/commits?branch=master&time_zone=utc&until=2025-06-23
* notice: last 14d: unq all: 2 6
* notice: prev accum: outdated-unq outdated-all / unq all: 556 949 / 561 954
* notice: next accum: outdated-unq outdated-all / unq all: 556 949 / 562 955
* notice: prev exec diff / last date diff / accum: unq all: +1 +1 -0 -0 / +1 +1 -0 -0 / 1 1
* notice: removed / changed dates: [] / [2025-06-22]

2025-06-22T01:02:22Z:
* notice: GitHub Actions Run: https://github.com/andry81-devops/actions/actions/runs/15801370929 # 682