@@ -1,9 +1,9 @@
 {
-  "timestamp" : "2025-06-26T00:57:08Z",
+  "timestamp" : "2025-06-27T00:57:35Z",
   "count_outdated" : 949,
   "uniques_outdated" : 556,
-  "count" : 957,
-  "uniques" : 564,
+  "count" : 958,
+  "uniques" : 565,
   "clones" : [
     {
       "timestamp": "2025-06-15T00:00:00Z",
@@ -70,6 +70,15 @@
     },
     {
       "timestamp": "2025-06-25T00:00:00Z",
+      "count": 1,
+      "count_minmax": [ 1, 1 ],
+      "count_decinc": [ 0, 1 ],
+      "uniques": 1,
+      "uniques_minmax": [ 1, 1 ],
+      "uniques_decinc": [ 0, 1 ]
+    },
+    {
+      "timestamp": "2025-06-26T00:00:00Z",
       "count": 1,
       "count_minmax": [ 1, 1 ],
       "count_decinc": [ 0, 1 ],
