@@ -1,6 +1,6 @@
 {
-  "count": 8,
-  "uniques": 3,
+  "count": 9,
+  "uniques": 4,
   "clones": [
     {
       "timestamp": "2025-06-15T00:00:00Z",
@@ -39,6 +39,11 @@
     },
     {
       "timestamp": "2025-06-25T00:00:00Z",
+      "count": 1,
+      "uniques": 1
+    },
+    {
+      "timestamp": "2025-06-26T00:00:00Z",
       "count": 1,
       "uniques": 1
     }
